[tool.poetry]
name = "stack-smasher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "smasher.py" }]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.108"
typer = "^0.12.3"
rich = "^13.7.1"
black = "^24.4.2"
natsort = "^8.4.0"

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
